--- a/packages/components/src/components/button/_mixins.scss
+++ b/packages/components/src/components/button/_mixins.scss
@@ -89,7 +89,7 @@
   }
 
   .#{$prefix}--btn__icon,
-  .#{$prefix}--btn__icon path:not([data-icon-path]) {
+  .#{$prefix}--btn__icon path:not([data-icon-path]):not([fill='none']) {
     fill: $icon-color;
   }
 }
