fix(Tooltip): remove pointer from TooltipDefinition, add disabled TooltipIcon (#8577)
* fix(TooltipDefinition): remove pointer from tooltip

* fix(TooltipDefinition): explicitly set cursor to default

* fix(TooltipIcon): prevent pointer cursor on nointeractive variant

* chore(tests): update snapshots

* feat(TooltipIcon): add disabled support

* chore(tests): update snapshots

* docs(TooltipIcon): add playground story

--- a/packages/components/src/components/tooltip/_tooltip.scss
+++ b/packages/components/src/components/tooltip/_tooltip.scss
@@ -151,8 +151,6 @@
       color: $text-primary;
 
       &:hover {
-        cursor: pointer;
-
         + .#{$prefix}--tooltip--definition__top,
         + .#{$prefix}--tooltip--definition__bottom {
           display: block;
@@ -182,7 +180,6 @@
     margin-top: $carbon--spacing-04;
     background: $background-inverse;
     border-radius: rem(2px);
-    cursor: pointer;
     pointer-events: none;
 
     p {
@@ -343,7 +340,6 @@
 
     display: inline-flex;
     align-items: center;
-    cursor: pointer;
     font-size: 1rem;
 
     &:focus {
@@ -351,6 +347,11 @@
 
       fill: $button-primary-hover;
     }
+  }
+
+  // Disabled styles
+  .#{$prefix}--tooltip__trigger:not(.#{$prefix}--btn--icon-only)[disabled] svg {
+    fill: $icon-disabled;
   }
 
   .#{$prefix}--tooltip__label .#{$prefix}--tooltip__trigger {
