refactor(project): update enable-2021-release to enable-v11-release (#8660)
* refactor(project): update enable-2021-release to enable-v11-release

* fix(toggle): rename v11 release flag

Co-authored-by: Taylor Jones <tay1orjones@users.noreply.github.com>
Co-authored-by: Taylor Jones <taylor.jones826@gmail.com>

--- a/packages/components/src/components/structured-list/_structured-list.scss
+++ b/packages/components/src/components/structured-list/_structured-list.scss
@@ -17,7 +17,7 @@
   .#{$prefix}--structured-list--selection .#{$prefix}--structured-list-th {
     @include padding--data-structured-list;
   }
-  @if feature-flag-enabled('enable-2021-release') {
+  @if feature-flag-enabled('enable-v11-release') {
     .#{$prefix}--structured-list-row--focused-within {
       @include focus-outline('outline');
     }
@@ -67,7 +67,7 @@
     cursor: inherit;
   }
 
-  @if not feature-flag-enabled('enable-2021-release') {
+  @if not feature-flag-enabled('enable-v11-release') {
     .#{$prefix}--structured-list-row:focus:not(.#{$prefix}--structured-list-row--header-row) {
       @include focus-outline('outline');
     }
@@ -123,7 +123,7 @@
     display: table-cell;
     max-width: 36rem;
     color: $text-secondary;
-    @if feature-flag-enabled('enable-2021-release') {
+    @if feature-flag-enabled('enable-v11-release') {
       border-top: 1px solid $border-subtle;
     }
 
