feat(Button, OrderedList, UnorderedList): add expressive styles (#8477)
* feat: add expressive prop to btn

* feat: add expressive styles

* docs: add expressive knob to playground

* feat: add expressive prop to lists

* feat: add expressive list styles

* docs: add expressive knob to list stories

* chore: update tests

* fix: update prop name and sizing

* chore: update tests

* test(expressive): expressive list btn

* remove console.log - failing tests

* test(button): update tests

* fix: expressive button sizing

* fix: expressive story and icon only btn

* chore: remove comment

* chore: remove comment

* fix: v10 sizing for expressive story

Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/button/_button.scss
+++ b/packages/components/src/components/button/_button.scss
@@ -440,6 +440,23 @@
     padding: $button-padding-field;
   }
 
+  //expressive styles
+  .#{$prefix}--btn--expressive {
+    @include carbon--type-style('body-short-02');
+
+    min-height: 3rem;
+  }
+
+  .#{$prefix}--btn--icon-only.#{$prefix}--btn--expressive {
+    padding: 12px 13px;
+    //default size 48px
+  }
+
+  .#{$prefix}--btn.#{$prefix}--btn--expressive .#{$prefix}--btn__icon {
+    width: rem(20px);
+    height: rem(20px);
+  }
+
   // Skeleton State
   .#{$prefix}--btn.#{$prefix}--skeleton {
     @include skeleton;
@@ -458,8 +475,6 @@
 
   .#{$prefix}--btn-set .#{$prefix}--btn {
     width: 100%;
-    // 196px from design kit
-    max-width: rem(196px);
 
     &:not(:focus) {
       box-shadow: rem(-1px) 0 0 0 $button-separator;
@@ -468,6 +483,11 @@
     &:first-of-type:not(:focus) {
       box-shadow: inherit;
     }
+  }
+
+  .#{$prefix}--btn-set .#{$prefix}--btn:not(.#{$prefix}--btn--expressive) {
+    // 196px from design kit
+    max-width: rem(196px);
   }
 
   .#{$prefix}--btn-set .#{$prefix}--btn:focus + .#{$prefix}--btn {
