feat(FileUploader): FileUploader size prop update (#8462)
* feat(Button): start size work on Button

* feat(Button): finish size prop update

* feat(Button): revert xl, 2xl changes

* feat(Button): add xl, 2xl updates behind feature flag

* feat(FileUploader): update size prop

* chore(storybook): remove old story

* test(snapshot): update snapshot tests

* test(snapshot): remove snapshot from different pr

* chore(tests): update snapshots

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/file-uploader/_file-uploader.scss
+++ b/packages/components/src/components/file-uploader/_file-uploader.scss
@@ -162,7 +162,9 @@
     }
   }
 
-  .#{$prefix}--file__selected-file--field {
+  // V11: Remove --field
+  .#{$prefix}--file__selected-file--field,
+  .#{$prefix}--file__selected-file--md {
     min-height: rem(40px);
     gap: $carbon--spacing-03 $carbon--spacing-05;
   }
@@ -192,7 +194,9 @@
     padding: $carbon--spacing-02 0;
   }
 
-  .#{$prefix}--file__selected-file--invalid.#{$prefix}--file__selected-file--field {
+  // V11: Remove --field
+  .#{$prefix}--file__selected-file--invalid.#{$prefix}--file__selected-file--field,
+  .#{$prefix}--file__selected-file--invalid.#{$prefix}--file__selected-file--md {
     padding: $carbon--spacing-03 0;
   }
 
@@ -206,7 +210,10 @@
     padding-top: rem(7px);
   }
 
+  // V11: Remove --field
   .#{$prefix}--file__selected-file--invalid.#{$prefix}--file__selected-file--field
+    .#{$prefix}--form-requirement,
+  .#{$prefix}--file__selected-file--invalid.#{$prefix}--file__selected-file--md
     .#{$prefix}--form-requirement {
     padding-top: rem(11px);
   }
