fix(type): update tokens to include new expressive tokens (#8661)
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/type/scss/_styles.scss
+++ b/packages/type/scss/_styles.scss
@@ -518,8 +518,11 @@ $display-04: (
 /// @group @carbon/type
 $tokens: (
   caption-01: $caption-01,
+  caption-02: $caption-02,
   label-01: $label-01,
+  label-02: $label-02,
   helper-text-01: $helper-text-01,
+  helper-text-02: $helper-text-02,
   body-short-01: $body-short-01,
   body-short-02: $body-short-02,
   body-long-01: $body-long-01,
