style(List): change from body-short-01 to body-long-01 (#8679)
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/list/_list.scss
+++ b/packages/components/src/components/list/_list.scss
@@ -23,7 +23,7 @@
   .#{$prefix}--list--ordered,
   .#{$prefix}--list--ordered--native {
     @include reset;
-    @include type-style('body-short-01');
+    @include type-style('body-long-01');
 
     list-style: none;
   }
