fix(Modal): Increase Overflow menu options z-index with modal open (#8694)
* fix(Modal): increase z-index for overflow-menu-options with modal open

* fix(Modal): Combine the tooltip and overflow-menu-options selectors with modal open

Co-authored-by: Taylor Jones <tay1orjones@users.noreply.github.com>
Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/modal/_modal.scss
+++ b/packages/components/src/components/modal/_modal.scss
@@ -371,7 +371,8 @@
     overflow: hidden;
   }
 
-  .#{$prefix}--body--with-modal-open .#{$prefix}--tooltip {
+  .#{$prefix}--body--with-modal-open .#{$prefix}--tooltip,
+  .#{$prefix}--body--with-modal-open .#{$prefix}--overflow-menu-options {
     z-index: z('modal');
   }
 
