feat(styles): add global utilities to @carbon/styles (#8651)
* feat(styles): add global utilities to @carbon/styles

* docs(styles): change text-truncate to mixin, add comments

* fix(styles): update utilities import to type

* fix(Tooltip): change relative path

Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/utilities/_convert.scss
+++ b/packages/styles/scss/utilities/_convert.scss
@@ -14,6 +14,7 @@ $base-font-size: 16px !default;
 /// @param {Number} $px - Number with px unit
 /// @return {Number} Number with rem unit
 /// @access public
+/// @group utilities
 @function rem($px) {
   @if unit($px) != 'px' {
     // TODO: update to @error in v11
@@ -27,6 +28,7 @@ $base-font-size: 16px !default;
 /// @param {Number} $px - Number with px unit
 /// @return {Number} Number with em unit
 /// @access public
+/// @group utilities
 @function em($px) {
   @if unit($px) != 'px' {
     // TODO: update to @error in v11
