feat: generalize menu component (#8169)
* refactor: rename ContextMenu into Menu

* refactor: extract storybook utils for building menus

* feat: add experimental menu-based OverflowMenu component

* chore: merge updates from context-menu

* feat(menu): add support for target boundaries

* fix(menu): fix overflowmenu-v2 not closing on first outsideclick

* fix(context-menu): remove merge relics

* fix: update public api snapshot to reflect menu changes

* refactor: use feature flag for overflowmenu-next

* fix: update data table snapshots

* docs: use danger kind in context menu story

* fix(overflow-menu): update feature flag name in export

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/menu/_menu.scss
+++ b/packages/components/src/components/menu/_menu.scss
@@ -9,11 +9,11 @@
 @import '../../globals/scss/vendor/@carbon/elements/scss/import-once/import-once';
 @import '../../globals/scss/helper-mixins';
 
-/// Context Menu styles
+/// Menu styles
 /// @access private
-/// @group context-menu
-@mixin context-menu {
-  .#{$prefix}--context-menu {
+/// @group menu
+@mixin menu {
+  .#{$prefix}--menu {
     @include box-shadow;
 
     position: fixed;
@@ -25,7 +25,7 @@
     visibility: hidden;
   }
 
-  .#{$prefix}--context-menu--open {
+  .#{$prefix}--menu--open {
     visibility: visible;
 
     &:focus {
@@ -33,11 +33,11 @@
     }
   }
 
-  .#{$prefix}--context-menu--invisible {
+  .#{$prefix}--menu--invisible {
     opacity: 0;
   }
 
-  .#{$prefix}--context-menu-option {
+  .#{$prefix}--menu-option {
     position: relative;
     height: $spacing-07;
     background-color: $layer;
@@ -50,22 +50,22 @@
     }
   }
 
-  .#{$prefix}--context-menu-option--active,
-  .#{$prefix}--context-menu-option:hover {
+  .#{$prefix}--menu-option--active,
+  .#{$prefix}--menu-option:hover {
     background-color: $layer-hover;
   }
 
-  .#{$prefix}--context-menu-option--danger:hover,
-  .#{$prefix}--context-menu-option--danger:focus {
+  .#{$prefix}--menu-option--danger:hover,
+  .#{$prefix}--menu-option--danger:focus {
     background-color: $button-danger-primary;
     color: $text-on-color;
   }
 
-  .#{$prefix}--context-menu-option > .#{$prefix}--context-menu {
+  .#{$prefix}--menu-option > .#{$prefix}--menu {
     margin-top: calc(#{$spacing-02} * -1);
   }
 
-  .#{$prefix}--context-menu-option__content {
+  .#{$prefix}--menu-option__content {
     display: flex;
     height: 100%;
     align-items: center;
@@ -73,18 +73,23 @@
     padding: 0 $spacing-05;
   }
 
-  .#{$prefix}--context-menu-option__content--disabled {
+  .#{$prefix}--menu-option__content--disabled {
     background-color: $layer;
     color: $text-disabled;
     cursor: not-allowed;
   }
 
-  .#{$prefix}--context-menu-option__content--indented
-    .#{$prefix}--context-menu-option__label {
+  .#{$prefix}--menu-option__content--disabled .#{$prefix}--menu-option__label,
+  .#{$prefix}--menu-option__content--disabled .#{$prefix}--menu-option__info,
+  .#{$prefix}--menu-option__content--disabled .#{$prefix}--menu-option__icon {
+    color: $text-disabled;
+  }
+
+  .#{$prefix}--menu-option__content--indented .#{$prefix}--menu-option__label {
     margin-left: $spacing-05;
   }
 
-  .#{$prefix}--context-menu-option__label {
+  .#{$prefix}--menu-option__label {
     @include type-style('body-short-01');
 
     overflow: hidden;
@@ -96,12 +101,12 @@
     white-space: nowrap;
   }
 
-  .#{$prefix}--context-menu-option__info {
+  .#{$prefix}--menu-option__info {
     display: inline-flex;
     margin-left: $spacing-05;
   }
 
-  .#{$prefix}--context-menu-option__icon {
+  .#{$prefix}--menu-option__icon {
     display: flex;
     width: 1rem;
     height: 1rem;
@@ -109,7 +114,7 @@
     margin-right: $spacing-03;
   }
 
-  .#{$prefix}--context-menu-divider {
+  .#{$prefix}--menu-divider {
     width: 100%;
     height: 1px;
     margin: $spacing-02 0;
@@ -117,6 +122,6 @@
   }
 }
 
-@include exports('context-menu') {
-  @include context-menu;
+@include exports('menu') {
+  @include menu;
 }
