--- a/packages/components/src/components/tooltip/_tooltip.scss
+++ b/packages/components/src/components/tooltip/_tooltip.scss
@@ -723,6 +723,24 @@
   }
 }
 
+/// Tooltip styles for v11
+/// @access private
+/// @group tooltip
+@mixin tooltip-next {
+  .#{$prefix}--tooltip {
+    display: inline-block;
+    position: relative;
+  }
+
+  .#{$prefix}--tooltip-content {
+    padding: $carbon--spacing-05;
+  }
+}
+
 @include exports('tooltip') {
-  @include tooltip;
+  @if feature-flag-enabled('enable-2021-release') {
+    @include tooltip-next;
+  } @else {
+    @include tooltip;
+  }
 }
