feat(styles): add accordion styles and tests (#8735)
* feat(themes): add token mappings to sass modules

* feat(test-utils): add unwrap helper for unwrapping sass values

* refactor(styles): update utilities exports

* feat(styles): add spacing entrypoint

* refactor(styles): update theme to only export colors

* feat(styles): add accordion styles and tests

* test: update snapshots

* fix(styles): update re-export for utilities

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/accordion/_index.scss
+++ b/packages/styles/scss/components/accordion/_index.scss
@@ -5,6 +5,7 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@forward 'scss/modules/themes';
-@forward 'scss/modules/theme';
-@forward 'scss/modules/tokens';
+@forward 'accordion';
+@use 'accordion';
+
+@include accordion.accordion;
