--- a/packages/themes/scss/modules/_tokens.scss
+++ b/packages/themes/scss/modules/_tokens.scss
@@ -5,6 +5,4 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@forward 'scss/modules/themes';
-@forward 'scss/modules/theme';
-@forward 'scss/modules/tokens';
+@forward 'generated/tokens';
