--- a/packages/styles/index.scss
+++ b/packages/styles/index.scss
@@ -5,9 +5,7 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@forward 'scss/config' with (
-  $prefix: 'bx' !default,
-);
+@forward 'scss/config';
 @forward 'scss/colors' hide $white;
 @forward 'scss/grid';
 @forward 'scss/motion';
