refactor(notification): improve accessibility (#8560)
* chore(wip): push up work

* chore(wip): push up work

* fix(notification): remove unused import from new test file

* fix(notification): remove unused export

* chore(wip): refactor toast notification, ensure no interactive children

* chore(wip): refactor inline notification to have correct aria role

* chore(wip): high contrast fix for toast notification content

* chore(wip): check in persistent notification work

* chore(wip): revert incorrect resolution from merge conflict with main

* fix(notification): improve inline/toast a11y, add persistent variant

* fix(notification): apply feedback from IBMa team

* test(notification): rewrite tests for newly refactored notifications

* chore: include yarn cache for updated user-event dep

* fix(notification): remove persistent variant

* chore: update snaps

* fix(notification): remove unecessary notificationType prop

* fix(notification): include margin bottom for toast

* fix(notification): remove additional references to unecessary notificationType prop

* chore(notification): revert development examples

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/notification/_inline-notification.scss
+++ b/packages/components/src/components/notification/_inline-notification.scss
@@ -196,16 +196,24 @@
     padding: rem(15px) 0;
   }
 
-  .#{$prefix}--inline-notification__title {
-    @include type-style('productive-heading-01');
+  @if feature-flag-enabled('enable-v11-release') {
+    .#{$prefix}--inline-notification__content {
+      @include type-style('body-short-01');
 
-    margin: 0 $carbon--spacing-02 0 0;
-  }
+      word-break: break-word;
+    }
+  } @else {
+    .#{$prefix}--inline-notification__title {
+      @include type-style('productive-heading-01');
 
-  .#{$prefix}--inline-notification__subtitle {
-    @include type-style('body-short-01');
+      margin: 0 $carbon--spacing-02 0 0;
+    }
 
-    word-break: break-word;
+    .#{$prefix}--inline-notification__subtitle {
+      @include type-style('body-short-01');
+
+      word-break: break-word;
+    }
   }
 
   .#{$prefix}--inline-notification__action-button.#{$prefix}--btn--ghost {
