fix(button): fix icon color on disabled icon only ghost buttons (#8810)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/button/_button.scss
+++ b/packages/components/src/components/button/_button.scss
@@ -289,7 +289,7 @@
 
   .#{$prefix}--btn--ghost.#{$prefix}--btn--icon-only[disabled]
     .#{$prefix}--btn__icon
-    path,
+    path:not([data-icon-path]):not([fill='none']),
   .#{$prefix}--btn--ghost.#{$prefix}--btn--icon-only[disabled]
     .#{$prefix}--btn__icon,
   .#{$prefix}--btn.#{$prefix}--btn--icon-only.#{$prefix}--btn--ghost[disabled]:hover
