--- a/packages/styles/scss/components/list/_index.scss
+++ b/packages/styles/scss/components/list/_index.scss
@@ -5,7 +5,7 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@use 'accordion';
-@use 'link';
+@forward 'list';
 @use 'list';
-@use 'loading';
+
+@include list.list;
