--- a/packages/styles/scss/components/loading/_index.scss
+++ b/packages/styles/scss/components/loading/_index.scss
@@ -5,7 +5,7 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@use 'accordion';
-@use 'link';
-@use 'list';
+@forward 'loading';
 @use 'loading';
+
+@include loading.loading;
