feat(Plex): add Plex package to carbon-react storybook (#8726)
* feat(Plex): add Plex package to carbon-react storybook

* chore(Plex): update to @ibm/plex@6.0.0-next.4

* fix(Plex): update package to fix font loading issue

* fix(Plex Mono): fix Plex Mono issue upstream

* chore(scss): clean up commented code

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/carbon-react/.storybook/styles.scss
+++ b/packages/carbon-react/.storybook/styles.scss
@@ -5,7 +5,20 @@
 // LICENSE file in the root directory of this source tree.
 //
 
+$feature-flags: (
+  enable-v11-release: true,
+);
+
+@use "~@ibm/plex/default" as sans;
+@use "~@ibm/plex/mono";
+@use "~@ibm/plex/arabic";
+
 @use '../index.scss' as styles;
+
+// For now, including all weights for testing
+@include arabic.all;
+@include sans.all;
+@include mono.all;
 
 body {
   @include styles.theme();
@@ -21,4 +34,17 @@ body {
 
 [data-carbon-theme='g100'] {
   @include styles.theme(styles.$g100);
+}
+
+html[lang='en'] body {
+  font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
+}
+
+html[lang='ar'] body {
+  font-family: 'IBM Plex Sans Arabic', 'Helvetica Neue', Arial, sans-serif;
+}
+
+.text-mono {
+  font-family: 'IBM Plex Mono', Menlo, 'DejaVu Sans Mono',
+    'Bitstream Vera Sans Mono', Courier, monospace;
 }
