--- a/packages/styles/scss/components/breadcrumb/_index.scss
+++ b/packages/styles/scss/components/breadcrumb/_index.scss
@@ -5,8 +5,7 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@use 'accordion';
+@forward 'breadcrumb';
 @use 'breadcrumb';
-@use 'link';
-@use 'list';
-@use 'loading';
+
+@include breadcrumb.breadcrumb;
