--- a/packages/styles/scss/components/button/_index.scss
+++ b/packages/styles/scss/components/button/_index.scss
@@ -5,9 +5,8 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@use 'accordion';
-@use 'breadcrumb';
+@forward 'vars';
+@forward 'button';
 @use 'button';
-@use 'link';
-@use 'list';
-@use 'loading';
+
+@include button.button;
